--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Baby Yoda</title>
 </head>
 <body>
-    <div class="baby-yoda"></div>
+    <div class="baby-yoda">
+        <div class="body"></div>
+    </div>
 </body>
 </html>
